Menu Complete and cover photo inserted

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogger</title>
+    <!-- font awsame -->
+    <link rel="stylesheet" href="./css/all.css">
+    <!-- /font awsame -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -13,6 +16,11 @@
         <div class="nav-menu flex-row">
             <div class="nav-brand">
                 <a class="text-grey">Blogger</a>
+            </div>
+            <div class="toggle-collapse">
+                <div class="toggle-icon">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </div>
             <div>
                 <ul class="nav-items">
@@ -31,14 +39,28 @@
                 </ul>
             </div>
             <div class="social text-grey">
-                <a href="#">F</a>
-                <a href="#">I</a>
-                <a href="#">T</a>
-                <a href="#">Y</a>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
     </nav>
     <!-- nav section end  -->
+    <!-- main content start -->
+    <main>
+        <!-- siter title start -->
+            <section class="site-title">
+                <div class="site-background">
+                    <h3>Tours & Travels</h3>
+                    <h1>Amazing Place on Earth</h1>
+                    <button class="btn">Explore</button>
+                </div>
+            </section>
+        <!-- siter title end -->
+    </main>
+    <!-- main content end -->
+    <script src="./js/jQueryv3.6.0.min.js"></script>
 
     <script src="./js/script.js"></script>
 </body>
